--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -31,11 +31,11 @@ and thus can not "hear" one another directly.
 
 - **Stage 1: ** Genesis Rewards
   - _Current Implementation_:
-    [Speed Test and Quality of Service](/5g-on-helium/mobile-poc#genesis-phase-3-speed-tests-and-quality-of-service)
+    [Speed Test and Quality of Service](/5g-on-helium/mobile-poc#speed-tests-and-quality-of-service)
   - _Work in Progress_:
-    [Heartbeats and Consistency of Service](/5g-on-helium/mobile-poc#genesis-phase-4-heartbeats-and-reliability-of-service)
-- **Stage 2: ** 5G Mappers Proof of Coverage
-- **Stage 3: ** Additional Methods of Proof of Coverage
+    [Heartbeats and Consistency of Service](/5g-on-helium/mobile-poc#heartbeats-and-reliability-of-service)
+- **Stage 2: ** [5G Mappers Proof of Coverage](/5g-on-helium/mobile-poc#mobile-mappers)
+- **Stage 3: ** [Additional Methods of Proof of Coverage](/5g-on-helium/mobile-poc#future-roadmap)
 
 ---
 
