better call ou tof features coming soon

--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -178,10 +178,39 @@ Speed Test Tier ->  `Fail`        -> 0.0x Multiplier
 
 ### Statistics on Helium Explorer
 
-Soon, Speed Test metrics will be viewable on the 5G Hotspot's page on Explorer under the
-`5G Statistics` tab.
+:::caution Current Explorer Statistics View
 
-Here are some examples of each status and a brief description of each.
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
+  <div class="row">
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <p>
+        Currently, Speed Test Metrics on Explorer are the latest results, <b>NOT</b> the Moving
+        Average that will be used in Rewards Calculations.
+      </p>
+    </div>
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <img
+        className="explorerSidebar"
+        src={useBaseUrl('img/5g-on-helium/explorer-5g-stats-raw-data.png')}
+      />
+    </div>
+  </div>
+</div>
+
+:::
+
+:::warning Coming Soon
+
+**Speed Test Metrics shown on Explorer are currently the most recent results.**
+
+**Before Speed Tests are incorporated into Rewards calculations, the Explorer will be updated to
+show the results of the Moving Average for each metric. See Examples of possible results below.**
+
+:::
+
+Speed Test metrics will be viewable on the 5G Hotspot's page on Explorer under the `5G Statistics`
+tab. Here are some examples of each status and a brief description of each metric and the resulting
+impact on Rewards calculations.
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
