--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -178,7 +178,7 @@ Speed Test Tier ->  `Fail`        -> 0.0x Multiplier
 
 ### Statistics on Helium Explorer
 
-:::caution Current Explorer Statistics View
+**Current Explorer Statistics View**
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -197,14 +197,12 @@ Speed Test Tier ->  `Fail`        -> 0.0x Multiplier
   </div>
 </div>
 
-:::
-
-:::warning Coming Soon
+:::caution Coming Soon
 
 **Speed Test Metrics shown on Explorer are currently the most recent results.**
 
-**Before Speed Tests are incorporated into Rewards calculations, the Explorer will be updated to
-show the results of the Moving Average for each metric. See Examples of possible results below.**
+**Once Speed Tests are incorporated into Rewards calculations, the Explorer will be updated to show
+the results of the Moving Average for each metric. See Examples of possible results below.**
 
 :::
 
